fix overflow

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -212,6 +212,7 @@ h1 {
 
 .team{
 	padding: 10px;
+	overflow: hidden;
 }
 
 .leader{
